--- a/docs/_includes/navigation.html
+++ b/docs/_includes/navigation.html
@@ -1,4 +1,8 @@
 <nav>
-	<a href="/">Hmoe</a>
-	<a href="/about.html">About</a>
+	{% for item in site.data.navigation %}
+	<a href="{ item.link }" {% if page.url == item.link %}style="color:red;"
+	   {% endif %}>
+	   {{ item.name }}
+	</a>
+	{% endfor %}
 </nav>
