--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -4,9 +4,10 @@
     <meta charset="utf-8">
     <title>{{ page.title }}</title>
     <link rel="stylesheet" href="/assets/css/styles.css">
+    <link rel="stylesheet" href="/bootstrap-3.4.1-dist/css/bootstrap.min.css">
   </head>
   <body>
 	  {% include navigation.html %}
-    {{ content }}
+          {{ content }}
   </body>
 </html>
