--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="/bootstrap-3.4.1-dist/css/bootstrap.min.css">
   </head>
   <body>
-	  <div><img src="/assets/image/bruceli.jpg" class="img-responsive center-block" /></div>
+	  <div><img src="/assets/image/bruceli.jpg" style="height=140px;" class="img-responsive center-block" /></div>
 	  {% include navigation.html %}
           {{ content }}
   </body>
