--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -9,6 +9,6 @@
   <body>
 	  <div><img src="/assets/image/bruceli.jpg" style="height:400px" class="img-responsive center-block" /></div>
 	  {% include navigation.html %}
-          {{ content }}
+	  <div class='leaderboard'>{{ content }}</div>
   </body>
 </html>
