--- a/docs/_includes/navigation.html
+++ b/docs/_includes/navigation.html
@@ -1,3 +1,4 @@
+<div class="justify-content-center">
 <nav>
 	{% for item in site.data.navigation %}
 	<a href="{{ item.link }}" {% if page.url == item.link %}style="color:red;"{% endif %}>
@@ -5,3 +6,4 @@
 	</a>
 	{% endfor %}
 </nav>
+</div>
