--- a/docs/_includes/navigation.html
+++ b/docs/_includes/navigation.html
@@ -1,9 +1,11 @@
 <div class="justify-content-center">
-<nav>
 	{% for item in site.data.navigation %}
+	<div class="p-2 bg-primary">
+<nav>
 	<a href="{{ item.link }}" {% if page.url == item.link %}style="color:red;"{% endif %}>
 	   {{ item.name }}
 	</a>
-	{% endfor %}
 </nav>
+	</div>
+	{% endfor %}
 </div>
