--- a/docs/_includes/navigation.html
+++ b/docs/_includes/navigation.html
@@ -1,4 +1,4 @@
-<div class="justify-content-center">
+<div class="justify-content-center text-white d-flex mb-3">
 	{% for item in site.data.navigation %}
 	<div class="p-2 bg-primary">
 <nav>
