--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -5,6 +5,9 @@
     <title>{{ page.title }}</title>
     <link rel="stylesheet" href="/assets/css/styles.css">
     <link rel="stylesheet" href="/bootstrap-3.4.1-dist/css/bootstrap.min.css">
+      <script src="https://cdn.staticfile.org/jquery/3.2.1/jquery.min.js"></script>
+  <script src="https://cdn.staticfile.org/popper.js/1.15.0/umd/popper.min.js"></script>
+  <script src="https://cdn.staticfile.org/twitter-bootstrap/4.3.1/js/bootstrap.min.js"></script>
   </head>
   <body>
 	  <div><img src="/assets/image/bruceli.jpg" style="height:400px" class="img-responsive center-block" /></div>
