--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -11,7 +11,7 @@
   </head>
   <body>
 	  <div><img src="/assets/image/bruceli.jpg" style="height:400px" class="img-responsive center-block" /></div>
-	  {% include navigation.html %}
+	  <div class="container">{% include navigation.html %}</div>
 	  <div class='container'>{{ content }}</div>
   </body>
 </html>
