--- a/docs/_includes/navigation.html
+++ b/docs/_includes/navigation.html
@@ -1,4 +1,4 @@
-<div class="d-flex p-3 bg-secondary text-white">
+<div class="banner">
 	{% for item in site.data.navigation %}
 	<div class="p-2 bg-primary">
 <nav>
