--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -7,6 +7,17 @@
     <link rel="stylesheet" href="/bootstrap-3.4.1-dist/css/bootstrap.min.css">
       <script src="/js/popper.js"></script>
   <script src="/js/jquery.js"></script>
+  <style type="text/css">
+.banner {
+    	width: 100px;
+    	height: 50px;
+    	background-color: yellow;
+    	box-shadow: 10px 10px 5px #888888;
+    	text-align: center;
+    	flex-direction: row;
+    	align-items: center;
+    }
+  </style>
   </head>
   <body>
 	  <div><img src="/assets/image/bruceli.jpg" style="height:400px" class="img-responsive center-block" /></div>
