--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -16,6 +16,8 @@
     	text-align: center;
     	flex-direction: row;
     	align-items: center;
+	line-height: 50px;
+	color: white;
     }
   </style>
   </head>
