--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -26,9 +26,9 @@
 	  <div class="container">{% include navigation.html %}</div>
 	  <div class='container'>{{ content }}</div>
 	  <script type="text/javascript">
-		  $(window.load(function(){
+		  $(window).load(function(){
 ("#my_img").hide()
-				    }))
+				    })
 	  </script>
   </body>
 </html>
