--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -27,7 +27,7 @@
 	  <div class='container'>{{ content }}</div>
 	  <script type="text/javascript">
 		  $(window).load(function(){
-("#my_img").hide()
+$("#my_img").hide()
 				    })
 	  </script>
   </body>
